--- a/buildscripts/resmokeconfig/suites/sharding.yml
+++ b/buildscripts/resmokeconfig/suites/sharding.yml
@@ -5,6 +5,9 @@ selector:
   - jstests/sharding/*.js
   exclude_files:
   - jstests/sharding/mrShardedOutput.js
+  # Disable incompatible with json logging per SERVER-46235
+  - jstests/sharding/read_write_concern_defaults_application.js
+  - jstests/sharding/comment_field.js
 
 executor:
   config:
