--- a/buildscripts/resmokeconfig/suites/sharding_multiversion.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_multiversion.yml
@@ -6,6 +6,10 @@ selector:
   exclude_with_any_tags:
   - multiversion_incompatible
   - requires_fcv_44
+  exclude_files:
+  # Disable incompatible with json logging per SERVER-46235
+  - jstests/sharding/read_write_concern_defaults_application.js
+  - jstests/sharding/comment_field.js
 executor:
   config:
     shell_options:
