--- a/buildscripts/resmokeconfig/suites/sharding_ese_gcm.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_ese_gcm.yml
@@ -7,6 +7,10 @@ test_kind: js_test
 selector:
   roots:
   - jstests/sharding/*.js
+  exclude_files:
+  # Disable incompatible with json logging per SERVER-46235
+  - jstests/sharding/read_write_concern_defaults_application.js
+  - jstests/sharding/comment_field.js
 
 executor:
   config:
