--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -573,7 +573,7 @@ functions:
         ${activate_virtualenv}
         bin_ver=$($python -c "import yaml; print(yaml.safe_load(open('compile_expansions.yml'))['version']);" | tr -d '[ \r\n]')
         # Due to SERVER-23810, we cannot use $mongo_binary --quiet --nodb --eval "version();"
-        mongo_ver=$($mongo_binary --version | perl -pe '/version v([^\"]*)(\"}})?$/; $_ = $1;' | tr -d '[ \r\n]')
+        mongo_ver=$($mongo_binary --version | perl -pe '/version v([^\"]*)/; $_ = $1;' | tr -d '[ \r\n]')
         # The versions must match
         if [ "$bin_ver" != "$mongo_ver" ]; then
           echo "The mongo version is $mongo_ver, expected version is $bin_ver"
@@ -11528,8 +11528,8 @@ buildvariants:
 
   # Builder with JSON log format, not needed when JSON is default format. See:
   # https://jira.mongodb.org/browse/SERVER-45138
-- name: enterprise-rhel-62-64-bit-logv2-json
-  display_name: "~ Enterprise RHEL 6.2 (logv2 json)"
+- name: enterprise-rhel-62-64-bit-logv2-text
+  display_name: "~ Enterprise RHEL 6.2 (logv2 text)"
   modules:
   - enterprise
   run_on:
@@ -11538,7 +11538,7 @@ buildvariants:
   expansions:
     additional_targets: archive-mongocryptd archive-mongocryptd-debug
     mh_target: archive-mh archive-mh-debug
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars CPPDEFINES=MONGO_CONFIG_JSON_LOG_DEFAULT
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars CPPDEFINES=MONGO_CONFIG_TEXT_LOG_DEFAULT
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     has_packages: true
@@ -11552,8 +11552,6 @@ buildvariants:
     target_resmoke_time: 10
     large_distro_name: rhel62-large
     burn_in_tag_buildvariants: enterprise-rhel-62-64-bit-majority-read-concern-off enterprise-rhel-62-64-bit-inmem linux-64-duroff
-    # This builder is the same as the regular logv2 builder defined above this. These flags are only difference
-    test_flags: --excludeWithAnyTags=requires_text_logs
   tasks:
   - name: compile_all_run_unittests_TG
     distros:
