SERVER-45138 Disable tests not yet compatible with JSON logging

--- a/buildscripts/resmokeconfig/suites/no_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/no_passthrough.yml
@@ -19,6 +19,9 @@ selector:
   - jstests/noPassthrough/log_format_slowms_samplerate_loglevel.js
   - jstests/noPassthrough/index_stepdown_unique.js
   - jstests/noPassthrough/loglong.js
+  - jstests/noPassthrough/hybrid_index_with_updates.js
+  - jstests/noPassthrough/hybrid_unique_index_with_updates.js
+  - jstests/noPassthrough/index_stepdown_after_init.js
 
 # noPassthrough tests start their own mongod's.
 executor:
