--- a/buildscripts/resmokeconfig/suites/replica_sets_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_jscore_passthrough.yml
@@ -19,6 +19,8 @@ selector:
   # command multiple times, which may observe the change to the "transactionLifetimeLimitSeconds"
   # server parameter.
   - jstests/core/set_param1.js
+  # Disable incompatible with json logging per SERVER-46235
+  - jstests/core/txns/timestamped_reads_wait_for_prepare_oplog_visibility.js
 
 executor:
   archive:
