SERVER-45978: Added "minRetentionHours" field to replSetResizeOplog cmd
 create mode 100644 src/mongo/db/commands/resize_oplog.idl

--- a/src/mongo/db/commands/SConscript
+++ b/src/mongo/db/commands/SConscript
@@ -372,6 +372,7 @@ env.Library(
         "oplog_note.cpp",
         'read_write_concern_defaults_server_status.cpp',
         "resize_oplog.cpp",
+        env.Idlc("resize_oplog.idl")[0],
         'rwc_defaults_commands.cpp',
         "set_feature_compatibility_version_command.cpp",
         "set_index_commit_quorum_command.cpp",
