SERVER-46267: Use artifact links to determine bypass compile artifacts

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -8342,6 +8342,10 @@ tasks:
 #######################################
 task_groups:
 - <<: *compile_task_group_template
+  name: compile_without_package_TG
+  tasks:
+  - compile
+- <<: *compile_task_group_template
   name: compile_TG
   tasks:
   - compile
