SERVER-46196 Fix creation of orphan Top entries on failed collection creation

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -33,6 +33,8 @@ replica_sets_jscore_multiversion_passthrough:
   test_file: jstests/core/profile_find.js
 - ticket: SERVER-44260
   test_file: jstests/core/txns/new_transaction_waits_for_previous_txn_table_updates.js
+- ticket: SERVER-46196
+  test_file: jstests/core/create_collection_fail_cleanup.js
 
 replica_sets_multiversion:
 - ticket: SERVER-42825
@@ -65,7 +67,11 @@ sharding_multiversion:
   test_file: jstests/sharding/retryable_writes.js
 
 sharding_jscore_multiversion_passthrough:
+- ticket: SERVER-46196
+  test_file: jstests/core/create_collection_fail_cleanup.js
 
 sharded_collections_jscore_multiversion_passthrough:
 - ticket: SERVER-35921
   test_file: jstests/core/min_max_key.js
+- ticket: SERVER-46196
+  test_file: jstests/core/create_collection_fail_cleanup.js
