--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -55,6 +55,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/trigger_initial_stable_checkpoint.js
 - ticket: SERVER-45178
   test_file: jstests/replsets/rollback_via_refetch_update_rollback_id_before_oplog_truncation.js
+- ticket: SERVER-32903
+  test_file: jstests/replsets/initial_sync_ambiguous_index.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
