SERVER-46129 Make ninja faster and contain all targets all the time

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3924,7 +3924,7 @@ tasks:
     - func: "scons compile"
       vars:
         task_compile_flags: >-
-          --ninja
+          --ninja=next
         targets:
           build.ninja
     - command: shell.exec
