SERVER-45840 Blacklist tests that run emptycapped from replica_sets_kill_secondaries_jscore_passthrough
(cherry picked from commit 12782dd756988d11b296cb5298ab74ea6ce8a444)

--- a/buildscripts/resmokeconfig/suites/replica_sets_kill_secondaries_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_kill_secondaries_jscore_passthrough.yml
@@ -14,6 +14,9 @@ selector:
   # true. This causes the test to hang because the secondary is running with the "rsSyncApplyStop "
   # failpoint enabled.
   - jstests/core/geo_update_btree.js
+  exclude_with_any_tags:
+  # emptycapped is not supported with rollback using recover-to-timestamp.
+  - requires_emptycapped
 
 executor:
   archive:
