SERVER-43332: new RSM implementation based on sdam

--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -194,9 +194,11 @@ clientDriverEnv.Library(
         env.Idlc('global_conn_pool.idl')[0],
         'replica_set_change_notifier.cpp',
         'replica_set_monitor.cpp',
+        'replica_set_monitor_manager.cpp',
         'scanning_replica_set_monitor.cpp',
         'streamable_replica_set_monitor.cpp',
-        'replica_set_monitor_manager.cpp',
+        'streamable_replica_set_monitor_query_processor.cpp',
+        'server_is_master_monitor.cpp',
         'server_ping_monitor.cpp',
     ],
     LIBDEPS=[
@@ -210,6 +212,7 @@ clientDriverEnv.Library(
         '$BUILD_DIR/mongo/util/md5',
         '$BUILD_DIR/mongo/util/net/network',
         'replica_set_monitor_server_parameters',
+		'$BUILD_DIR/mongo/client/sdam/sdam',
         'clientdriver_minimal',
         'read_preference',
     ],
