--- a/src/mongo/client/sdam/SConscript
+++ b/src/mongo/client/sdam/SConscript
@@ -7,16 +7,21 @@ env = env.Clone()
 env.Library(
     target='sdam',
     source=[
+		'sdam_configuration.cpp',
         'sdam_datatypes.cpp',
         'server_description.cpp',
         'topology_description.cpp',
+		'topology_listener.cpp',
         'topology_state_machine.cpp',
         'topology_manager.cpp',
+		'server_selector.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
         '$BUILD_DIR/mongo/db/repl/optime',
         '$BUILD_DIR/mongo/util/clock_sources',
+		'$BUILD_DIR/mongo/client/read_preference',
+		'$BUILD_DIR/mongo/executor/task_executor_interface',
         '$BUILD_DIR/mongo/db/wire_version',
         '$BUILD_DIR/mongo/rpc/metadata',
     ],
@@ -65,6 +70,15 @@ env.CppUnitTest(
     target='topology_manager_test',
     source=['topology_manager_test.cpp'],
     LIBDEPS=['sdam', 'sdam_test'],
+)
+
+env.CppUnitTest(
+	target='server_selector_test',
+	source=['server_selector_test.cpp'],
+	LIBDEPS=[
+		'sdam',
+		'sdam_test',
+	],
 )
 
 env.CppUnitTest(
