SERVER-46041 Add DiagnosticListener/WaitListener LSAN suppressions
This commit also adds a new opt=off Ubuntu 18.04 builder to better
ensure dev environments function correctly.

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -12040,6 +12040,19 @@ buildvariants:
     distros:
     - ubuntu1604-build
 
+- name: enterprise-ubuntu-no-latch-1804-64-bit
+  display_name: "~ Enterprise Ubuntu 18.04 DEBUG (Unoptimized)"
+  batchtime: 1440 # 1 day
+  modules:
+  - enterprise
+  expansions:
+    compile_flags: MONGO_DISTMOD=ubuntu1804 -j$(grep -c ^processor /proc/cpuinfo) --dbg=on --opt=off --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars
+    scons_cache_scope: shared
+  tasks:
+  - name: compile_all_run_unittests_TG
+    distros:
+    - ubuntu1804-build
+
 - name: shared-scons-cache-pruning
   display_name: "Shared SCons Cache Pruning"
   run_on:
