--- a/buildscripts/resmokeconfig/suites/retryable_writes_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/retryable_writes_jscore_passthrough.yml
@@ -24,6 +24,7 @@ selector:
   # These test run commands using legacy queries, which are not supported on sessions.
   - jstests/core/comment_field.js
   - jstests/core/exhaust.js
+  - jstests/core/invalidated_legacy_cursors.js
   - jstests/core/validate_cmd_ns.js
 
   # TODO SERVER-31249: getLastError should not be affected by no-op retries.
