--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -8523,7 +8523,7 @@ buildvariants:
 - &linux-64-debug-template
   name: linux-64-debug
   display_name: "! Linux DEBUG"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   run_on:
   - rhel62-large
   expansions:
@@ -9267,7 +9267,7 @@ buildvariants:
 
 - name: windows-debug
   display_name: "* Windows DEBUG"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   run_on:
   - windows-64-vs2019-small
   expansions:
@@ -9333,7 +9333,7 @@ buildvariants:
 
 - name: enterprise-windows-required
   display_name: "! Enterprise Windows"
-  batchtime: 60 # 1 hour
+  batchtime: 60 # 1 hours
   modules:
   - enterprise
   run_on:
@@ -10257,7 +10257,7 @@ buildvariants:
 - &enterprise-rhel-70-64-bit-template
   name: enterprise-rhel-70-64-bit
   display_name: "* Enterprise RHEL 7.0"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   modules:
   - enterprise
   run_on:
@@ -10440,7 +10440,7 @@ buildvariants:
 
 - name: ubuntu1604-debug
   display_name: "* Ubuntu 16.04 DEBUG"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   run_on:
   - ubuntu1604-test
   expansions:
@@ -10915,7 +10915,7 @@ buildvariants:
 
 - name: enterprise-ubuntu-dynamic-1604-clang
   display_name: "! Shared Library Enterprise Ubuntu 16.04 (Clang)"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   modules:
   - enterprise
   run_on:
@@ -10937,7 +10937,7 @@ buildvariants:
 
 - name: enterprise-ubuntu-dynamic-1604-clang-tidy
   display_name: "* Enterprise Clang Tidy"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   modules:
   - enterprise
   run_on:
@@ -10953,7 +10953,7 @@ buildvariants:
 
 - name: ubuntu-dynamic-1604-clang
   display_name: "* Shared Library Ubuntu 16.04 (Clang)"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   run_on:
    - ubuntu1604-test
   expansions:
@@ -11919,7 +11919,7 @@ buildvariants:
 
 - name: ubuntu1804-debug-aubsan-lite
   display_name: "! {A,UB}SAN Enterprise Ubuntu 18.04 DEBUG"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   modules:
   - enterprise
   run_on:
@@ -12014,7 +12014,7 @@ buildvariants:
 
 - name: enterprise-ubuntu-dynamic-1604-64-bit
   display_name: "* Shared Library Enterprise Ubuntu 16.04"
-  batchtime: 60 # 1 hour
+  batchtime: 180 # 3 hours
   modules:
   - enterprise
   expansions:
