SERVER-45085 check config replication condition on reconfig

--- a/buildscripts/resmokeconfig/suites/replica_sets.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets.yml
@@ -3,6 +3,9 @@ test_kind: js_test
 selector:
   roots:
   - jstests/replsets/*.js
+  exclude_files:
+  # Relies on the currently disabled config quorum checker for replSetReconfig.
+  - jstests/replsets/disallow_adding_initialized_node1.js
 
 executor:
   config:
