--- a/buildscripts/resmokeconfig/suites/replica_sets_large_txns_format.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_large_txns_format.yml
@@ -6,6 +6,9 @@ selector:
   exclude_with_any_tags:
   # Transactions are not allowed to operate on capped collections.
   - requires_capped
+  exclude_files:
+  # Relies on the currently disabled config quorum checker for replSetReconfig.
+  - jstests/replsets/disallow_adding_initialized_node1.js
 
 executor:
   config:
