SERVER-45087 Check oplog commitment condition on replica set reconfig
 create mode 100644 jstests/replsets/reconfig_waits_for_oplog_commitment_condition.js
 create mode 100644 jstests/replsets/reconfig_waits_for_oplog_commitment_condition_when_leaving_force.js

--- a/buildscripts/resmokeconfig/suites/replica_sets.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets.yml
@@ -6,6 +6,7 @@ selector:
   exclude_files:
   # Relies on the currently disabled config quorum checker for replSetReconfig.
   - jstests/replsets/disallow_adding_initialized_node1.js
+  - jstests/replsets/disallow_adding_initialized_node2.js
 
 executor:
   config:
