--- a/buildscripts/resmokeconfig/suites/replica_sets_auth.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_auth.yml
@@ -17,6 +17,7 @@ selector:
   - jstests/replsets/transactions_committed_with_tickets_exhausted.js
   # Relies on the currently disabled config quorum checker for replSetReconfig.
   - jstests/replsets/disallow_adding_initialized_node1.js
+  - jstests/replsets/disallow_adding_initialized_node2.js
 
 executor:
   config:
