SERVER-46433 hot_backups builder tries to build mongocryptd even though it disables it

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -10391,6 +10391,7 @@ buildvariants:
   - rhel70
   expansions:
     <<: *enterprise-rhel-70-64-bit-expansions-template
+    additional_targets: ""
     compile_flags: --ssl MONGO_DISTMOD=rhel70 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_v3_gcc.vars --enterprise-features=hot_backups
     has_packages: false
     mh_target: ""
