--- a/buildscripts/resmokeconfig/suites/no_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/no_passthrough.yml
@@ -12,6 +12,8 @@ selector:
   - jstests/noPassthrough/inmem_full.js
   # Disable incompatible with json logging per SERVER-46235
   - jstests/noPassthrough/loglong.js
+  # Disable until the new RSM is compatible as per SERVER-46452. TODO SERVER-46454.
+  - jstests/noPassthrough/predictive_connpool.js
 
 # noPassthrough tests start their own mongod's.
 executor:
