--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -11568,6 +11568,8 @@ buildvariants:
 
 - name: linux-64-ephemeralForTest
   display_name: Linux (ephemeralForTest)
+  stepback: false
+  batchtime: 1440 # 1 day
   run_on:
   - rhel62-small
   expansions:
