--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -6154,6 +6154,16 @@ tasks:
     vars:
       resmoke_args: --suites=replica_sets_jscore_passthrough --storageEngine=wiredTiger
 
+- <<: *task_template
+  name: replica_sets_reconfig_jscore_passthrough
+  depends_on:
+  - name: jsCore
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_args: --suites=replica_sets_reconfig_jscore_passthrough --storageEngine=wiredTiger
+
 - name: replica_sets_jscore_passthrough_gen
   depends_on:
   - name: jsCore
@@ -8630,6 +8640,7 @@ buildvariants:
   - name: .ocsp
   - name: .read_write_concern
   - name: .replica_sets !.encrypt
+  - name: replica_sets_reconfig_jscore_passthrough
   - name: .retry
   - name: .read_only
   - name: session_jscore_passthrough
@@ -9932,6 +9943,7 @@ buildvariants:
   - name: .replica_sets !.encrypt !.auth
     distros:
     - rhel62-large
+  - name: replica_sets_reconfig_jscore_passthrough
   - name: retryable_writes_jscore_passthrough_gen
   - name: retryable_writes_jscore_stepdown_passthrough
     distros:
