SERVER-39071 Implements commit quorum for two phase index builds.

--- a/src/mongo/db/catalog/SConscript
+++ b/src/mongo/db/catalog/SConscript
@@ -134,6 +134,9 @@ env.Library(
         "$BUILD_DIR/mongo/db/repl/oplog_entry",
         "$BUILD_DIR/mongo/rpc/command_status",
     ],
+    LIBDEPS_PRIVATE=[
+        'commit_quorum_options',
+    ],
 )
 
 env.Library(
