--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -765,6 +765,7 @@ env.Library(
     LIBDEPS_PRIVATE=[
         'transaction',
         '$BUILD_DIR/mongo/db/commands/mongod_fcv',
+        "$BUILD_DIR/mongo/db/catalog/commit_quorum_options",
     ],
 )
 
@@ -826,7 +827,10 @@ env.Library(
         'db_raii',
         'index_build_entry_helpers',
         '$BUILD_DIR/mongo/db/catalog/collection_catalog',
+        '$BUILD_DIR/mongo/db/catalog/index_build_entry_idl',
         '$BUILD_DIR/mongo/db/catalog/index_timestamp_helper',
+        "$BUILD_DIR/mongo/executor/task_executor_interface",
+        "$BUILD_DIR/mongo/db/storage/two_phase_index_build_knobs_idl",
     ],
 )
 
@@ -857,6 +861,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/repl/timestamp_block',
         '$BUILD_DIR/mongo/db/s/sharding_api_d',
         '$BUILD_DIR/mongo/util/fail_point',
+        "$BUILD_DIR/mongo/executor/task_executor_interface",
     ],
 )
 
