--- a/src/mongo/db/storage/SConscript
+++ b/src/mongo/db/storage/SConscript
@@ -430,13 +430,21 @@ env.Library(
         '$BUILD_DIR/mongo/db/server_options_core',
     ],
 )
+env.Library(
+    target='two_phase_index_build_knobs_idl',
+    source=[
+        env.Idlc('two_phase_index_build_knobs.idl')[0],
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/idl/server_parameter',
+    ],
+)
 
 env.Library(
     target='storage_engine_impl',
     source=[
         'storage_engine_impl.cpp',
         'kv/temporary_kv_record_store.cpp', # TODO: SERVER-41892 Avoid source under kv sub-directory
-        env.Idlc('two_phase_index_build_knobs.idl')[0],
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
@@ -451,6 +459,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/storage/storage_repair_observer',
         '$BUILD_DIR/mongo/db/catalog/collection_catalog_helper',
         '$BUILD_DIR/mongo/idl/server_parameter',
+        'two_phase_index_build_knobs_idl',
     ],
 )
 
