--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -197,7 +197,6 @@ clientDriverEnv.Library(
         'scanning_replica_set_monitor.cpp',
         'streamable_replica_set_monitor.cpp',
         'replica_set_monitor_manager.cpp',
-        env.Idlc('replica_set_monitor_params.idl')[0],
         'server_ping_monitor.cpp',
     ],
     LIBDEPS=[
@@ -210,6 +209,7 @@ clientDriverEnv.Library(
         '$BUILD_DIR/mongo/util/background_job',
         '$BUILD_DIR/mongo/util/md5',
         '$BUILD_DIR/mongo/util/net/network',
+        'replica_set_monitor_server_parameters',
         'clientdriver_minimal',
         'read_preference',
     ],
@@ -217,6 +217,17 @@ clientDriverEnv.Library(
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/transport/message_compressor',
         '$BUILD_DIR/mongo/util/net/ssl_manager',
+    ]
+)
+
+env.Library(
+    target='replica_set_monitor_server_parameters',
+    source=[
+        'replica_set_monitor_server_parameters.cpp',
+        env.Idlc('replica_set_monitor_server_parameters.idl')[0],
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/idl/server_parameter',
     ]
 )
 
@@ -307,12 +318,12 @@ env.CppUnitTest(
         'authenticate_test.cpp',
         'connection_string_test.cpp',
         'dbclient_cursor_test.cpp',
-        'disable_streamable_rsm_flag_test.cpp',
         'fetcher_test.cpp',
         'index_spec_test.cpp',
         'mongo_uri_test.cpp',
         'read_preference_test.cpp',
         'remote_command_retry_scheduler_test.cpp',
+        'replica_set_monitor_server_parameters_test.cpp', 
         'scanning_replica_set_monitor_internal_test.cpp',
         'scanning_replica_set_monitor_read_preference_test.cpp',
         'scanning_replica_set_monitor_scan_test.cpp',
@@ -342,6 +353,18 @@ env.CppUnitTest(
         'fetcher',
         'read_preference',
         'remote_command_retry_scheduler',
+        'replica_set_monitor_protocol_test_fixture',
+    ],
+)
+
+env.Library(
+    target='replica_set_monitor_protocol_test_fixture',
+    source=[
+        'replica_set_monitor_protocol_test_fixture.cpp',
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/dbtests/mocklib',
+        'clientdriver_network',
     ],
 )
 
@@ -350,11 +373,12 @@ env.CppUnitTest(
 env.CppUnitTest(
     target='client_rs_test',
     source=[
-        'dbclient_rs_test.cpp'
+        'dbclient_rs_test.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/dbtests/mocklib',
         'clientdriver_network',
+        'replica_set_monitor_protocol_test_fixture',
     ],
 )
 
