--- a/src/mongo/dbtests/SConscript
+++ b/src/mongo/dbtests/SConscript
@@ -114,10 +114,10 @@ if not has_option('noshell') and usemozjs:
             'query_stage_trial.cpp',
             'query_stage_update.cpp',
             'querytests.cpp',
-            'replica_set_monitor_test.cpp',
             'replica_set_tests.cpp',
             'repltests.cpp',
             'rollbacktests.cpp',
+            'scanning_replica_set_monitor_test.cpp',
             'socktests.cpp',
             'storage_timestamp_tests.cpp',
             'threadedtests.cpp',
@@ -128,6 +128,7 @@ if not has_option('noshell') and usemozjs:
         ],
         LIBDEPS=[
             "$BUILD_DIR/mongo/bson/mutable/mutable_bson_test_utils",
+            "$BUILD_DIR/mongo/client/replica_set_monitor_protocol_test_fixture",
             "$BUILD_DIR/mongo/db/auth/authmongod",
             "$BUILD_DIR/mongo/db/bson/dotted_path_support",
             "$BUILD_DIR/mongo/db/catalog/collection_validation",
