--- a/buildscripts/resmokeconfig/suites/replica_sets_max_mirroring.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_max_mirroring.yml
@@ -3,9 +3,6 @@ test_kind: js_test
 selector:
   roots:
   - jstests/replsets/*.js
-  exclude_with_any_tags:
-  # Transactions are not allowed to operate on capped collections.
-  - requires_capped
   exclude_files:
   # TODO SERVER-46534 will make this work with mirrored reads on
   - jstests/replsets/read_operations_during_step_up.js
@@ -18,4 +15,4 @@ executor:
       global_vars:
         TestData:
           setParameters:
-            maxNumberOfTransactionOperationsInSingleOplogEntry: 1
+            mirrorReads: "{samplingRate: 1.0}"
