--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -6928,6 +6928,14 @@ tasks:
       resmoke_args: --storageEngine=wiredTiger
       fallback_num_sub_suites: 15
 
+- name: replica_sets_max_mirroring_gen
+  tags: ["replica_sets", "san"]
+  commands:
+  - func: "generate resmoke tasks"
+    vars:
+      resmoke_args: --storageEngine=wiredTiger
+      fallback_num_sub_suites: 15
+
 - <<: *task_template
   name: replica_sets_multiversion
   tags: ["random_multiversion_replica_sets"]
@@ -6987,6 +6995,15 @@ tasks:
       fallback_num_sub_suites: 32
 
 - name: sharding_rs_matching_match_busiest_node_gen
+  tags: ["sharding", "common"]
+  commands:
+  - func: "generate resmoke tasks"
+    vars:
+      use_large_distro: "true"
+      resmoke_args: --storageEngine=wiredTiger
+      fallback_num_sub_suites: 32
+
+- name: sharding_max_mirroring_gen
   tags: ["sharding", "common"]
   commands:
   - func: "generate resmoke tasks"
