--- a/src/mongo/SConscript
+++ b/src/mongo/SConscript
@@ -279,6 +279,7 @@ config_header_substs = (
     ('@mongo_config_ssl@', 'MONGO_CONFIG_SSL'),
     ('@mongo_config_ssl_has_asn1_any_definitions@', 'MONGO_CONFIG_HAVE_ASN1_ANY_DEFINITIONS'),
     ('@mongo_config_ssl_provider@', 'MONGO_CONFIG_SSL_PROVIDER'),
+    ('@mongo_config_use_raw_latches@', 'MONGO_CONFIG_USE_RAW_LATCHES'),
     ('@mongo_config_wiredtiger_enabled@', 'MONGO_CONFIG_WIREDTIGER_ENABLED'),
 )
 
@@ -434,6 +435,7 @@ mongod = env.Program(
         'util/clock_sources',
         'util/elapsed_tracker',
         'util/fail_point',
+        'util/latch_analyzer' if get_option('use-diagnostic-latches') == 'on' else [],
         'util/net/network',
         'util/ntservice',
         'util/options_parser/options_parser_init',
@@ -538,6 +540,7 @@ mongos = env.Program(
         'transport/transport_layer_manager',
         'util/clock_sources',
         'util/fail_point',
+        'util/latch_analyzer' if get_option('use-diagnostic-latches') == 'on' else [],
         'util/net/ssl_options_server' if get_option('ssl') == 'on' else '',
         'util/ntservice',
         'util/version_impl',
