--- a/src/mongo/config.h.in
+++ b/src/mongo/config.h.in
@@ -89,5 +89,8 @@
 // Defined if SSL support is enabled with chosen ssl provider
 @mongo_config_ssl_provider@
 
+// Defined if raw latches are enabled
+@mongo_config_use_raw_latches@
+
 // Defined if WiredTiger storage engine is enabled
 @mongo_config_wiredtiger_enabled@
